fixed caption spacing

--- a/res/play.css
+++ b/res/play.css
@@ -32,7 +32,7 @@ body {
 
 .caption-box p {
     margin-bottom: 1em;
-    padding-left: 0.8em;
+    padding-left: 0.9em;
     font-family: "JetBrains Mono", monospace;
     color: #333333;
     font-size: 1em;
@@ -95,7 +95,7 @@ body {
         padding-left: 0;
     }
     .caption-box p {
-        padding-left: 0;
+        padding-left: 0.1em;
     }
     .text-boxes,
     .image-grid {
